--- a/checkpoint_quantum_firewall/assets/dashboards/checkpoint_quantum_firewall_application_control.json
+++ b/checkpoint_quantum_firewall/assets/dashboards/checkpoint_quantum_firewall_application_control.json
@@ -239,7 +239,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.severity",
+                                        "facet": "@severity",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -300,7 +300,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.action",
+                                        "facet": "@action",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -371,7 +371,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -433,7 +433,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -495,7 +495,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -557,7 +557,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -610,7 +610,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.app_category",
+                                        "facet": "@app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -619,7 +619,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -672,7 +672,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.app_category",
+                                        "facet": "@app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -681,7 +681,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -743,7 +743,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -805,7 +805,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -866,7 +866,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -932,7 +932,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Drop OR Reject OR Block) $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -982,7 +982,7 @@
                                 },
                                 "group_by": [
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.app_category",
+                                        "facet": "@app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1127,7 +1127,7 @@
                                         }
                                     },
                                     {
-                                        "facet": "@checkpoint.quantum.firewall.app_category",
+                                        "facet": "@app_category",
                                         "limit": 10,
                                         "sort": {
                                             "order": "desc",
@@ -1144,7 +1144,7 @@
                                     }
                                 ],
                                 "search": {
-                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @checkpoint.quantum.firewall.action:(Accept OR Allow) @app_risk:[4 TO 5] $Checkpoint_Server $Action $Application_Category $Application_Name "
+                                    "query": "source:checkpoint-quantum-firewall @product:\"Application Control\" @action:(Accept OR Allow) @app_risk:[4 TO 5] $Checkpoint_Server $Action $Application_Category $Application_Name "
                                 },
                                 "storage": "hot"
                             }
@@ -1193,7 +1193,7 @@
                                 "width": "auto"
                             },
                             {
-                                "field": "checkpoint.quantum.firewall.severity",
+                                "field": "severity",
                                 "width": "auto"
                             },
                             {
@@ -1205,7 +1205,7 @@
                                 "width": "auto"
                             },
                             {
-                                "field": "checkpoint.quantum.firewall.action",
+                                "field": "action",
                                 "width": "auto"
                             },
                             {
@@ -1213,7 +1213,7 @@
                                 "width": "auto"
                             },
                             {
-                                "field": "checkpoint.quantum.firewall.app_category",
+                                "field": "app_category",
                                 "width": "auto"
                             },
                             {
@@ -1250,13 +1250,13 @@
         },
         {
             "name": "Action",
-            "prefix": "@checkpoint.quantum.firewall.action",
+            "prefix": "@action",
             "available_values": [],
             "default": "*"
         },
         {
             "name": "Application_Category",
-            "prefix": "@checkpoint.quantum.firewall.app_category",
+            "prefix": "@app_category",
             "available_values": [],
             "default": "*"
         },
