--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -181,11 +181,11 @@ manifest.json         @DataDog/documentation @DataDog/agent-integrations
 /otel/manifest.json                       @DataDog/opentelemetry @DataDog/agent-integrations @DataDog/documentation
 /otel/assets/logs/                        @DataDog/opentelemetry @DataDog/agent-integrations @DataDog/documentation @DataDog/logs-backend
 
-# Agent Platform
-/nvidia_jetson/                           @DataDog/agent-platform @DataDog/agent-integrations
-/nvidia_jetson/*.md                       @DataDog/agent-platform @DataDog/agent-integrations @DataDog/documentation
-/nvidia_jetson/manifest.json              @DataDog/agent-platform @DataDog/agent-integrations @DataDog/documentation
-/nvidia_jetson/assets/logs/               @DataDog/agent-platform @DataDog/agent-integrations @DataDog/documentation @DataDog/logs-backend
+# Agent CI Experience
+/nvidia_jetson/                           @DataDog/agent-ci-experience @DataDog/agent-integrations
+/nvidia_jetson/*.md                       @DataDog/agent-ci-experience @DataDog/agent-integrations @DataDog/documentation
+/nvidia_jetson/manifest.json              @DataDog/agent-ci-experience @DataDog/agent-integrations @DataDog/documentation
+/nvidia_jetson/assets/logs/               @DataDog/agent-ci-experience @DataDog/agent-integrations @DataDog/documentation @DataDog/logs-backend
 
 # Database monitoring
 **/base/utils/db/utils.py                           @DataDog/agent-integrations @DataDog/database-monitoring-agent
