--- a/.codecov.yml
+++ b/.codecov.yml
@@ -174,6 +174,10 @@ coverage:
         target: 75
         flags:
         - eks_fargate
+      ESXi:
+        target: 75
+        flags:
+        - esxi
       Elasticsearch:
         target: 75
         flags:
@@ -890,6 +894,11 @@ flags:
     paths:
     - envoy/datadog_checks/envoy
     - envoy/tests
+  esxi:
+    carryforward: true
+    paths:
+    - esxi/datadog_checks/esxi
+    - esxi/tests
   etcd:
     carryforward: true
     paths:
