--- a/cisco_duo/manifest.json
+++ b/cisco_duo/manifest.json
@@ -9,10 +9,38 @@
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
     "description": "Gain insights into Cisco Duo logs.",
-    "title": "cisco_duo",
-    "media": [],
+    "title": "Cisco Duo",
+    "media": [
+      {
+        "caption": "Cisco Duo - Authentication Logs",
+        "image_url": "images/cisco_duo_authentication_logs.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Cisco Duo - Activity Logs",
+        "image_url": "images/cisco_duo_activity_logs.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Cisco Duo - Administrator Logs",
+        "image_url": "images/cisco_duo_administrator_logs.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Cisco Duo - Telephony Logs",
+        "image_url": "images/cisco_duo_telephony_logs.png",
+        "media_type": "image"
+      },
+      {
+        "caption": "Cisco Duo - Offline Enrollment Logs",
+        "image_url": "images/cisco_duo_offline_enrollment_logs.png",
+        "media_type": "image"
+      }
+    ],
     "classifier_tags": [
-      "Category::Metrics"
+      "Category::Log Collection",
+      "Category::Security",
+      "Submitted Data Type::Logs"
     ]
   },
   "assets": {
@@ -26,6 +54,16 @@
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
       }
+    },
+    "dashboards": {
+      "Cisco Duo - Authentication Logs": "assets/dashboards/cisco_duo_authentication_logs.json",
+      "Cisco Duo - Activity Logs": "assets/dashboards/cisco_duo_activity_logs.json",
+      "Cisco Duo - Administrator Logs": "assets/dashboards/cisco_duo_administrator_logs.json",
+      "Cisco Duo - Telephony Logs": "assets/dashboards/cisco_duo_telephony_logs.json",
+      "Cisco Duo - Offline Enrollment Logs": "assets/dashboards/cisco_duo_offline_enrollment_logs.json"
+    },
+    "logs": {
+      "source": "cisco-duo"
     }
   },
   "author": {
