--- a/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+++ b/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
@@ -6,12 +6,12 @@ beautifulsoup4==4.12.3; python_version > '3.0'
 beautifulsoup4==4.9.3; python_version < '3.0'
 binary==1.0.0
 boto3==1.17.112; python_version < '3.0'
-boto3==1.34.49; python_version > '3.0'
+boto3==1.34.64; python_version > '3.0'
 boto==2.49.0
 botocore==1.20.112; python_version < '3.0'
-botocore==1.34.49; python_version > '3.0'
+botocore==1.34.64; python_version > '3.0'
 cachetools==3.1.1; python_version < '3.0'
-cachetools==5.3.2; python_version > '3.0'
+cachetools==5.3.3; python_version > '3.0'
 clickhouse-cityhash==1.0.2.3; python_version < '3.0'
 clickhouse-cityhash==1.0.2.4; python_version > '3.0'
 clickhouse-driver==0.2.0; python_version < '3.0'
@@ -49,19 +49,19 @@ oauthlib==3.2.2; python_version > '3.0'
 openstacksdk==3.0.0; python_version > '3.0'
 oracledb==1.3.2; python_version >= '3.0'
 orjson==3.9.15; python_version > '3.0'
-packaging==23.2; python_version > '3.0'
+packaging==24.0; python_version > '3.0'
 paramiko==2.12.0; python_version < '3.0'
 paramiko==3.4.0; python_version > '3.0'
 ply==3.11
 prometheus-client==0.12.0; python_version < '3.0'
 prometheus-client==0.20.0; python_version > '3.0'
 protobuf==3.17.3; python_version < '3.0'
-protobuf==4.25.3; python_version > '3.0'
+protobuf==5.26.0; python_version > '3.0'
 psutil==5.9.0
 psycopg2-binary==2.9.9; python_version > '3.0'
 pyasn1==0.4.6
 pycryptodomex==3.20.0
-pydantic==2.0.2; python_version > '3.0'
+pydantic==2.6.4; python_version > '3.0'
 pyjwt==1.7.1; python_version < '3.0'
 pyjwt==2.8.0; python_version > '3.0'
 pymongo[srv]==4.6.2; python_version >= '3.9'
@@ -75,7 +75,7 @@ pysnmp==4.4.9
 pysocks==1.7.1
 python-binary-memcached==0.26.1; sys_platform != 'win32' and python_version < '3.0'
 python-binary-memcached==0.31.2; sys_platform != 'win32' and python_version > '3.0'
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python3-gearman==0.1.0; sys_platform != 'win32' and python_version > '3.0'
 pyvmomi==8.0.0.1; python_version < '3.0'
 pyvmomi==8.0.2.0.1; python_version > '3.0'
@@ -84,12 +84,12 @@ pywin32==306; sys_platform == 'win32' and python_version > '3.0'
 pyyaml==5.4.1; python_version < '3.0'
 pyyaml==6.0.1; python_version > '3.0'
 redis==3.5.3; python_version < '3.0'
-redis==5.0.1; python_version > '3.0'
+redis==5.0.3; python_version > '3.0'
 requests-kerberos==0.12.0; python_version < '3.0'
 requests-kerberos==0.14.0; python_version > '3.0'
 requests-ntlm==1.1.0; python_version < '3.0'
 requests-ntlm==1.2.0; python_version > '3.0'
-requests-oauthlib==1.3.1; python_version < '3.0'
+requests-oauthlib==1.4.0; python_version < '3.0'
 requests-oauthlib==1.4.0; python_version > '3.0'
 requests-toolbelt==1.0.0
 requests-unixsocket==0.3.0
