--- a/coredns/datadog_checks/coredns/data/conf.yaml.example
+++ b/coredns/datadog_checks/coredns/data/conf.yaml.example
@@ -46,7 +46,7 @@ init_config:
 instances:
 
     ## @param openmetrics_endpoint - string - optional - default: http://%%host%%:9153/metrics
-    ## The URL where CodeDNS exposes Prometheus metrics.
+    ## The URL where CoreDNS exposes Prometheus metrics.
     #
   - openmetrics_endpoint: http://%%host%%:9153/metrics
 
