--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ trigger-agent-build:
   rules:
     - if: ($CI_COMMIT_BRANCH =~ /^7.[0-9]{2}.x/)
       changes:
-        - datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+        - .deps/*
       when: always
     - if: ($CI_COMMIT_BRANCH !~ /^7.[0-9]{2}.x/)
       when: always
@@ -65,7 +65,7 @@ trigger-agent-build:
     - export AGENT_REQUIREMENTS_CHANGED="false"
     - git fetch origin master
     - BASE_REF=$(git merge-base HEAD FETCH_HEAD)
-    - git --no-pager diff --exit-code --name-only HEAD $BASE_REF -- datadog_checks_base/datadog_checks/base/data/agent_requirements.in || export AGENT_REQUIREMENTS_CHANGED="true" || true
+    - git --no-pager diff --exit-code --name-only HEAD $BASE_REF -- .deps || export AGENT_REQUIREMENTS_CHANGED="true" || true
     - export RELEASE_BRANCH=""
     - |
       if [[ "$AGENT_REQUIREMENTS_CHANGED" = "true" ]]; then
