--- a/karpenter/manifest.json
+++ b/karpenter/manifest.json
@@ -51,6 +51,10 @@
     },
     "monitors": {
       "pod states": "assets/monitors/pod_state.json"
+    },
+    "saved_views": {
+      "Karpenter Overview": "assets/saved_views/karpenter_overview.json",
+      "Karpenter Error Logs": "assets/saved_views/karpenter_error_logs.json"
     }
   },
   "author": {
