--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -8,6 +8,7 @@ datadog-ambari==4.2.0; sys_platform != 'win32'
 datadog-apache==4.5.0
 datadog-arangodb==2.2.0
 datadog-argo-rollouts==1.0.0
+datadog-argo-workflows==1.0.0
 datadog-argocd==2.3.0
 datadog-aspdotnet==2.1.0; sys_platform == 'win32'
 datadog-avi-vantage==4.2.0
