--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -157,6 +157,7 @@ datadog-system-core==2.4.0
 datadog-system-swap==1.18.0
 datadog-tcp-check==4.8.0
 datadog-teamcity==4.2.0
+datadog-tekton==1.0.0
 datadog-temporal==2.2.0
 datadog-tenable==1.5.0
 datadog-teradata==2.1.1; sys_platform != 'darwin'
