--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -7,6 +7,8 @@ datadog-amazon-msk==4.5.0
 datadog-ambari==4.2.0; sys_platform != 'win32'
 datadog-apache==4.5.0
 datadog-arangodb==2.2.0
+datadog-argo-rollouts==1.0.0
+datadog-argo-workflows==1.0.0
 datadog-argocd==2.3.0
 datadog-aspdotnet==2.1.0; sys_platform == 'win32'
 datadog-avi-vantage==4.2.0
@@ -24,6 +26,7 @@ datadog-checks-dependency-provider==1.4.0
 datadog-checks-downloader==4.5.0
 datadog-cilium==3.4.0
 datadog-cisco-aci==2.7.0
+datadog-cisco-secure-firewall==1.0.0
 datadog-citrix-hypervisor==3.2.0
 datadog-clickhouse==3.3.0
 datadog-cloud-foundry-api==3.3.0
@@ -154,6 +157,7 @@ datadog-system-core==2.4.0
 datadog-system-swap==1.18.0
 datadog-tcp-check==4.8.0
 datadog-teamcity==4.2.0
+datadog-tekton==1.0.0
 datadog-temporal==2.2.0
 datadog-tenable==1.5.0
 datadog-teradata==2.1.1; sys_platform != 'darwin'
