--- a/teleport/assets/configuration/spec.yaml
+++ b/teleport/assets/configuration/spec.yaml
@@ -7,4 +7,17 @@ files:
     - template: init_config/default
   - template: instances
     options:
+    - name: "teleport_url"
+      required: true
+      description: "The Teleport URL to connect to."
+      value:
+        type: string
+        example: "http://127.0.0.1"
+    - name: "diag_port"
+      description: "The Teleport Diagnostic Port."
+      value:
+        type: integer
+        example: 3000
+      
+
     - template: instances/default
