--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": "2.0.0",
   "app_uuid": "28d531ac-954c-4c5a-8769-589589f793e0",
-  "app_id": "argo_rollouts",
+  "app_id": "argo-rollouts",
   "display_on_public_website": false,
   "tile": {
     "overview": "README.md#Overview",
