--- a/postgres/tests/compose/etc/postgresql/postgresql.conf
+++ b/postgres/tests/compose/etc/postgresql/postgresql.conf
@@ -4,6 +4,7 @@ pg_stat_statements.max=10000
 pg_stat_statements.track=all
 track_io_timing=on
 track_functions=pl
+statement_timeout = 10000
 
 wal_level = logical
 max_wal_senders = 10
