--- a/postgres/tests/compose/etc/postgresql_replica2/postgresql.conf
+++ b/postgres/tests/compose/etc/postgresql_replica2/postgresql.conf
@@ -5,6 +5,7 @@ pg_stat_statements.max=100
 pg_stat_statements.track=all
 track_io_timing=on
 track_functions=pl
+statement_timeout = 10000
 
 hot_standby = on
 hot_standby_feedback = off
