--- a/postgres/tests/compose/docker-compose-replication.yaml
+++ b/postgres/tests/compose/docker-compose-replication.yaml
@@ -19,6 +19,7 @@ services:
       - ./etc/postgresql:/etc/postgresql/
     environment:
       POSTGRES_PASSWORD: datad0g
+      POSTGRES_INITDB_ARGS: --data-checksums
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf' -c 'hba_file=/etc/postgresql/pg_hba.conf'
 
   postgres_replica:
@@ -37,6 +38,7 @@ services:
       - ./etc/postgresql_replica:/etc/postgresql/
     environment:
       POSTGRES_PASSWORD: datad0g
+      POSTGRES_INITDB_ARGS: --data-checksums
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
 
   postgres_replica2:
@@ -55,6 +57,7 @@ services:
       - ./etc/postgresql_replica2:/etc/postgresql/
     environment:
       POSTGRES_PASSWORD: datad0g
+      POSTGRES_INITDB_ARGS: --data-checksums
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
 
   postgres_logical_replica:
@@ -73,4 +76,5 @@ services:
       - ./etc/postgresql_logical_replica:/etc/postgresql/
     environment:
       POSTGRES_PASSWORD: datad0g
+      POSTGRES_INITDB_ARGS: --data-checksums
     command: postgres -c 'config_file=/etc/postgresql/postgresql.conf'
