--- a/datadog_checks_dev/pyproject.toml
+++ b/datadog_checks_dev/pyproject.toml
@@ -34,7 +34,7 @@ classifiers = [
 dependencies = [
     "contextlib2; python_version < '3.0'",
     "coverage>=5.0.3",
-    "flaky>=3.8.0",
+    "flaky>=3.8.0; python_version > '3.0",
     "mock",
     "psutil",
     "py>=1.8.2; python_version < '3.0'",  # https://github.com/ionelmc/pytest-benchmark/issues/226
