--- a/postgres/assets/configuration/spec.yaml
+++ b/postgres/assets/configuration/spec.yaml
@@ -8,9 +8,8 @@ files:
       description: |
         Set to `true` to propagate the tags from `datadog.yaml` to the check.
         When set to `true`, the tags from `datadog.yaml` are added to the check's tags for all instances.        
-        NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
       value:
-        example: true
+        example: false
         type: boolean
     - template: init_config/default
   - template: instances
@@ -877,9 +876,8 @@ files:
         Set to `true` to propagate the tags from `datadog.yaml` to the check.
         When set to `true`, the tags from `datadog.yaml` are added to the check's tags.
         This option takes precedence over the `propagate_agent_tags` option in `init_config`.
-        NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
       value:
-        example: true
+        example: false
         type: boolean
     - template: instances/default
       overrides:
