--- a/postgres/datadog_checks/postgres/data/conf.yaml.example
+++ b/postgres/datadog_checks/postgres/data/conf.yaml.example
@@ -2,12 +2,11 @@
 #
 init_config:
 
-    ## @param propagate_agent_tags - boolean - optional - default: true
+    ## @param propagate_agent_tags - boolean - optional - default: false
     ## Set to `true` to propagate the tags from `datadog.yaml` to the check.
     ## When set to `true`, the tags from `datadog.yaml` are added to the check's tags for all instances.        
-    ## NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
     #
-    # propagate_agent_tags: true
+    # propagate_agent_tags: false
 
     ## @param service - string - optional
     ## Attach the tag `service:<SERVICE>` to every metric, event, and service check emitted by this integration.
@@ -681,13 +680,12 @@ instances:
         #
         # keep_identifier_quotation: false
 
-    ## @param propagate_agent_tags - boolean - optional - default: true
+    ## @param propagate_agent_tags - boolean - optional - default: false
     ## Set to `true` to propagate the tags from `datadog.yaml` to the check.
     ## When set to `true`, the tags from `datadog.yaml` are added to the check's tags.
     ## This option takes precedence over the `propagate_agent_tags` option in `init_config`.
-    ## NOTE: This option is by default opted-in. If you want to opt-out, set this option to `false`.
     #
-    # propagate_agent_tags: true
+    # propagate_agent_tags: false
 
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
