--- a/esxi/datadog_checks/esxi/data/conf.yaml.example
+++ b/esxi/datadog_checks/esxi/data/conf.yaml.example
@@ -29,10 +29,10 @@ instances:
     password: <PASSWORD>
 
     ## @param use_guest_hostname - boolean - optional - default: false
-    ## If true, the check will use the guest hostname for VMs instead of the VM name
-    ## This requires the VM to have VMware tools installed in it. If the guest hostname is
+    ## If true, the check will use the guest hostname for VMs instead of the VM name.
+    ## This requires the VM to have VMware tools installed. If the guest hostname is
     ## not available, it will fallback to the VM name.
-    ## Use this if you install the agent in VMs so that the hosts are not duplicated
+    ## Use this if you install the agent on VMs to avoid duplicate entries for hosts
     ## in the web application UI.
     ## Note: If VMs are duplicated in the Infrastructure List, follow these troubleshooting steps
     ##       https://docs.datadoghq.com/integrations/faq/troubleshooting-duplicated-hosts-with-vsphere/.
